--- a/analysis/Nick/MethodChaininLikeAMutha.ipynb
+++ b/analysis/Nick/MethodChaininLikeAMutha.ipynb
@@ -2,74 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "8caa3822",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def LoadnClean (path):\n",
-    "    import pandas as pd\n",
-    "    import seaborn as sns\n",
-    "    import matplotlib as plt\n",
-    "    import numpy as np\n",
-    "    \n",
-    "    df1 = ( \n",
-    "                pd.read_csv(path,index_col = 0)\n",
-    "          )\n",
-    "    df2 = ( df1\n",
-    "                .drop(index=df1.index[0])\n",
-    "                .rename(columns={\"X1\":\"Credit Limit\",\n",
-    "                            \"X2\":\"Sex\",\n",
-    "                            \"X3\":\"Education\",\n",
-    "                            \"X4\":\"Marital Status\",\n",
-    "                            \"X5\":\"Age\",\n",
-    "                            \"X6\":\"Pay/Sept07\",\n",
-    "                            \"X6\":\"PayStat/Sept05\",\n",
-    "                            \"X7\":\"PayStat/Aug05\",\n",
-    "                            \"X8\":\"PayStat/Jul05\",\n",
-    "                            \"X9\":\"PayStat/Jun05\",\n",
-    "                            \"X10\":\"PayStat/May05\",\n",
-    "                            \"X11\":\"PayStat/Apr05\",\n",
-    "                            \"X12\":\"Outstanding/Sept05\",\n",
-    "                            \"X13\":\"Outstanding/Aug05\",\n",
-    "                            \"X14\":\"Outstanding/Jul05\",\n",
-    "                            \"X15\":\"Outstanding/Jun05\",\n",
-    "                            \"X16\":\"Outstanding/May05\",\n",
-    "                            \"X17\":\"Outstanding/Apr05\",\n",
-    "                            \"X18\":\"Paid/Sept05\",\n",
-    "                            \"X19\":\"Paid/Aug05\",\n",
-    "                            \"X20\":\"Paid/Jul05\",\n",
-    "                            \"X21\":\"Paid/Jun05\",\n",
-    "                            \"X22\":\"Paid/May05\",\n",
-    "                            \"X23\":\"Paid/Apr05\",\n",
-    "                            \"Y\":\"Default\"\n",
-    "                           })\n",
-    "               .apply(pd.to_numeric)\n",
-    "               .replace({'Sex': {1: \"M\", 2: 'F'}})\n",
-    "               .replace({'Education': {1: \"MSc or PHd\", 2: 'BSc', 3: 'High School Diploma', 4:\"Other\"}})\n",
-    "               .replace({'Marital Status': {1: \"Married\", 2: 'Single', 3: 'Other'}})\n",
-    "               .replace({'Default': {1: \"True\", 0: 'False'}})\n",
-    "          )\n",
-    "    df2\n",
-    "    df3 = ( df2\n",
-    "                .assign(Payment_Score=(df2[\"PayStat/Sept05\"]+df2['PayStat/Aug05']+df2['PayStat/Jul05']+df2['PayStat/Jun05']+df2['PayStat/May05']+df2['PayStat/Apr05']+6)/6)\n",
-    "                .assign(Avg_Outstanding=(df2[\"Outstanding/Sept05\"]+df2['Outstanding/Aug05']+df2['Outstanding/Jul05']+df2['Outstanding/Jun05']+df2['Outstanding/May05']+df2['Outstanding/Apr05'])/6)\n",
-    "                .assign(Avg_Paid=(df2[\"Paid/Sept05\"]+df2['Paid/Aug05']+df2['Paid/Jul05']+df2['Paid/Jun05']+df2['Paid/May05']+df2['Paid/Apr05'])/6)\n",
-    "                .drop([\"PayStat/Jun05\",\"PayStat/Sept05\",\"PayStat/Aug05\",\"PayStat/Jul05\",\"PayStat/May05\",\"PayStat/Apr05\"], axis=1)\n",
-    "                .drop([\"Outstanding/Sept05\",\"Outstanding/Aug05\",\"Outstanding/Apr05\",\"Outstanding/Jul05\",\"Outstanding/Jun05\",\"Outstanding/May05\"], axis=1)\n",
-    "                .drop([\"Paid/Sept05\",\"Paid/Aug05\",\"Paid/Apr05\",\"Paid/Jul05\",\"Paid/Jun05\",\"Paid/May05\"], axis=1)\n",
-    "                .reindex(columns=[\"Credit Limit\", \"Sex\", \"Education\",\"Marital Status\",\"Age\",\"Payment_Score\",\"Avg_Outstanding\",\"Avg_Paid\",\"Default\"])\n",
-    "                [df2[\"Default\"]==\"True\"]\n",
-    "          )\n",
-    "    df3\n",
-    "    \n",
-    "    return df3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "b0f31d9d",
+   "execution_count": 35,
+   "id": "eb86d246",
    "metadata": {},
    "outputs": [
     {
@@ -130,40 +64,40 @@
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>70000</td>\n",
-       "      <td>M</td>\n",
+       "      <th>3</th>\n",
+       "      <td>90000</td>\n",
+       "      <td>F</td>\n",
        "      <td>BSc</td>\n",
        "      <td>Single</td>\n",
-       "      <td>30</td>\n",
-       "      <td>2.166667</td>\n",
-       "      <td>56447.500000</td>\n",
-       "      <td>1783.333333</td>\n",
-       "      <td>True</td>\n",
+       "      <td>34</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>16942.166667</td>\n",
+       "      <td>1836.333333</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>20000</td>\n",
-       "      <td>M</td>\n",
-       "      <td>MSc or PHd</td>\n",
-       "      <td>Single</td>\n",
-       "      <td>24</td>\n",
-       "      <td>2.333333</td>\n",
-       "      <td>17693.500000</td>\n",
-       "      <td>1058.333333</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>120000</td>\n",
+       "      <th>4</th>\n",
+       "      <td>50000</td>\n",
        "      <td>F</td>\n",
        "      <td>BSc</td>\n",
        "      <td>Married</td>\n",
-       "      <td>39</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>316.000000</td>\n",
-       "      <td>263.333333</td>\n",
-       "      <td>True</td>\n",
+       "      <td>37</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>38555.666667</td>\n",
+       "      <td>1398.000000</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>50000</td>\n",
+       "      <td>M</td>\n",
+       "      <td>BSc</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>57</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>18223.166667</td>\n",
+       "      <td>9841.500000</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -178,28 +112,28 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29992</th>\n",
-       "      <td>210000</td>\n",
+       "      <th>29996</th>\n",
+       "      <td>220000</td>\n",
        "      <td>M</td>\n",
-       "      <td>BSc</td>\n",
+       "      <td>High School Diploma</td>\n",
        "      <td>Married</td>\n",
-       "      <td>34</td>\n",
-       "      <td>3.166667</td>\n",
-       "      <td>2500.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>True</td>\n",
+       "      <td>39</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>120891.500000</td>\n",
+       "      <td>7091.666667</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29995</th>\n",
-       "      <td>80000</td>\n",
+       "      <th>29997</th>\n",
+       "      <td>150000</td>\n",
        "      <td>M</td>\n",
-       "      <td>BSc</td>\n",
+       "      <td>High School Diploma</td>\n",
        "      <td>Single</td>\n",
-       "      <td>34</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>78488.833333</td>\n",
-       "      <td>3583.333333</td>\n",
-       "      <td>True</td>\n",
+       "      <td>43</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>3530.333333</td>\n",
+       "      <td>2415.000000</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29998</th>\n",
@@ -239,19 +173,19 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6636 rows × 9 columns</p>\n",
+       "<p>29601 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "       Credit Limit Sex            Education Marital Status  Age  \\\n",
        "1             20000   F                  BSc        Married   24   \n",
        "2            120000   F                  BSc         Single   26   \n",
-       "14            70000   M                  BSc         Single   30   \n",
-       "17            20000   M           MSc or PHd         Single   24   \n",
-       "22           120000   F                  BSc        Married   39   \n",
+       "3             90000   F                  BSc         Single   34   \n",
+       "4             50000   F                  BSc        Married   37   \n",
+       "5             50000   M                  BSc        Married   57   \n",
        "...             ...  ..                  ...            ...  ...   \n",
-       "29992        210000   M                  BSc        Married   34   \n",
-       "29995         80000   M                  BSc         Single   34   \n",
+       "29996        220000   M  High School Diploma        Married   39   \n",
+       "29997        150000   M  High School Diploma         Single   43   \n",
        "29998         30000   M                  BSc         Single   37   \n",
        "29999         80000   M  High School Diploma        Married   41   \n",
        "30000         50000   M                  BSc        Married   46   \n",
@@ -259,30 +193,97 @@
        "       Payment_Score  Avg_Outstanding      Avg_Paid Default  \n",
        "1           0.666667      1284.000000    114.833333    True  \n",
        "2           1.500000      2846.166667    833.333333    True  \n",
-       "14          2.166667     56447.500000   1783.333333    True  \n",
-       "17          2.333333     17693.500000   1058.333333    True  \n",
-       "22          0.000000       316.000000    263.333333    True  \n",
+       "3           1.000000     16942.166667   1836.333333   False  \n",
+       "4           1.000000     38555.666667   1398.000000   False  \n",
+       "5           0.666667     18223.166667   9841.500000   False  \n",
        "...              ...              ...           ...     ...  \n",
-       "29992       3.166667      2500.000000      0.000000    True  \n",
-       "29995       3.000000     78488.833333   3583.333333    True  \n",
+       "29996       1.000000    120891.500000   7091.666667   False  \n",
+       "29997       0.333333      3530.333333   2415.000000   False  \n",
        "29998       2.333333     11749.333333   5216.666667    True  \n",
        "29999       0.833333     44435.166667  24530.166667    True  \n",
        "30000       1.000000     38479.000000   1384.666667    True  \n",
        "\n",
-       "[6636 rows x 9 columns]"
+       "[29601 rows x 9 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "\n",
+    "    import pandas as pd\n",
+    "    import seaborn as sns\n",
+    "    import matplotlib as plt\n",
+    "    import numpy as np\n",
+    "    path = \"C:\\\\Users\\\\nick3\\\\OneDrive\\\\Desktop\\\\COSC_301\\\\Project2\\\\group07-Project\\\\data\\\\raw\\\\defaultofcreditcardclients.csv\"\n",
+    "    df1 = ( \n",
+    "                pd.read_csv(path,index_col = 0)\n",
+    "          )\n",
+    "    df2 = ( df1\n",
+    "                .drop(index=df1.index[0])\n",
+    "                .rename(columns={\"X1\":\"Credit Limit\",\n",
+    "                            \"X2\":\"Sex\",\n",
+    "                            \"X3\":\"Education\",\n",
+    "                            \"X4\":\"Marital Status\",\n",
+    "                            \"X5\":\"Age\",\n",
+    "                            \"X6\":\"Pay/Sept07\",\n",
+    "                            \"X6\":\"PayStat/Sept05\",\n",
+    "                            \"X7\":\"PayStat/Aug05\",\n",
+    "                            \"X8\":\"PayStat/Jul05\",\n",
+    "                            \"X9\":\"PayStat/Jun05\",\n",
+    "                            \"X10\":\"PayStat/May05\",\n",
+    "                            \"X11\":\"PayStat/Apr05\",\n",
+    "                            \"X12\":\"Outstanding/Sept05\",\n",
+    "                            \"X13\":\"Outstanding/Aug05\",\n",
+    "                            \"X14\":\"Outstanding/Jul05\",\n",
+    "                            \"X15\":\"Outstanding/Jun05\",\n",
+    "                            \"X16\":\"Outstanding/May05\",\n",
+    "                            \"X17\":\"Outstanding/Apr05\",\n",
+    "                            \"X18\":\"Paid/Sept05\",\n",
+    "                            \"X19\":\"Paid/Aug05\",\n",
+    "                            \"X20\":\"Paid/Jul05\",\n",
+    "                            \"X21\":\"Paid/Jun05\",\n",
+    "                            \"X22\":\"Paid/May05\",\n",
+    "                            \"X23\":\"Paid/Apr05\",\n",
+    "                            \"Y\":\"Default\"\n",
+    "                           })\n",
+    "               .apply(pd.to_numeric)\n",
+    "               .replace({'Sex': {1: \"M\", 2: 'F'}})\n",
+    "               .replace({'Education': {1: \"MSc or PHd\", 2: 'BSc', 3: 'High School Diploma', 4:\"Other\", 5:\"Delete\", 6:\"Delete\", 0:\"Delete\"}})\n",
+    "               .replace({'Marital Status': {1: \"Married\", 2: 'Single', 3: 'Other', 0:\"Delete\"}})\n",
+    "               .replace({'Default': {1: \"True\", 0: 'False'}})\n",
+    "               .loc[lambda row : ~row['Education'].str.contains('Delete')]\n",
+    "               .loc[lambda row : ~row['Marital Status'].str.contains('Delete')]\n",
+    "          )\n",
+    "    df2\n",
+    "    df3 = ( df2\n",
+    "                .assign(Payment_Score=(df2[\"PayStat/Sept05\"]+df2['PayStat/Aug05']+df2['PayStat/Jul05']+df2['PayStat/Jun05']+df2['PayStat/May05']+df2['PayStat/Apr05']+6)/6)\n",
+    "                .assign(Avg_Outstanding=(df2[\"Outstanding/Sept05\"]+df2['Outstanding/Aug05']+df2['Outstanding/Jul05']+df2['Outstanding/Jun05']+df2['Outstanding/May05']+df2['Outstanding/Apr05'])/6)\n",
+    "                .assign(Avg_Paid=(df2[\"Paid/Sept05\"]+df2['Paid/Aug05']+df2['Paid/Jul05']+df2['Paid/Jun05']+df2['Paid/May05']+df2['Paid/Apr05'])/6)\n",
+    "                .drop([\"PayStat/Jun05\",\"PayStat/Sept05\",\"PayStat/Aug05\",\"PayStat/Jul05\",\"PayStat/May05\",\"PayStat/Apr05\"], axis=1)\n",
+    "                .drop([\"Outstanding/Sept05\",\"Outstanding/Aug05\",\"Outstanding/Apr05\",\"Outstanding/Jul05\",\"Outstanding/Jun05\",\"Outstanding/May05\"], axis=1)\n",
+    "                .drop([\"Paid/Sept05\",\"Paid/Aug05\",\"Paid/Apr05\",\"Paid/Jul05\",\"Paid/Jun05\",\"Paid/May05\"], axis=1)\n",
+    "                .reindex(columns=[\"Credit Limit\", \"Sex\", \"Education\",\"Marital Status\",\"Age\",\"Payment_Score\",\"Avg_Outstanding\",\"Avg_Paid\",\"Default\"])\n",
+    "           \n",
+    "\n",
+    "          )\n",
+    "    df3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65853ceb",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "206f8a1d",
+   "id": "50625403",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0feab7ed",
+   "id": "d7991554",
    "metadata": {},
    "outputs": [],
    "source": []
